@@ -1,54 +1,0 @@
-# Copyright (c) 2017-2020 Martin Donath <martin.donath@squidfunk.com>
-
-# Permission is hereby granted, free of charge, to any person obtaining a copy
-# of this software and associated documentation files (the "Software"), to
-# deal in the Software without restriction, including without limitation the
-# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
-# sell copies of the Software, and to permit persons to whom the Software is
-# furnished to do so, subject to the following conditions:
-
-# The above copyright notice and this permission notice shall be included in
-# all copies or substantial portions of the Software.
-
-# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
-# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
-# IN THE SOFTWARE.
-
-# macOS internals
-.DS_Store
-
-# NPM-related
-/node_modules
-/npm-debug.log*
-
-# Source files
-/scripts
-/src
-/tests
-/typings
-
-# Coverage reports
-/coverage
-
-# Configuration
-.babelrc
-.codecov.yml
-.editorconfig
-.gitignore
-.npmignore
-.travis.yml
-CODE_OF_CONDUCT.md
-CONTRIBUTING.md
-Makefile
-package-lock.json
-tsconfig.json
-tslint.json
-webpack.config.ts
-
-# Git-related
-/.githooks
-/.github
