@@ -1,3 +1,7 @@
+karma-viewport-1.0.6 (2020-03-24)
+
+  * Upgraded dependencies and fixed security vulnerabilities
+
 karma-viewport-1.0.5 (2020-01-29)
 
   * Fixed #113: Invalid file type warning
